# PyPharao

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment-dev.yml  environment.yml  pyproject.toml  top_hits_ph_1.sdf  top_hits_ph_2.sdf
conda-recipe/: meta.yaml
examples/: 01-pharmacophore-from-molecule.py  02-modification-of-pharmacophores.py  02-working-with-conformations.py  03-excluded-volumes.py  03-modifying-pharmacophores.py  04-excluded-volumes-from-multiple-ligands.py  05-writing-and-reading-pharmacophores.py  06-pharmacophore-from-pdb.py  paracetamol_hits.sdf
examples/google-colab/: 01-pharmacophore-from-molecule.ipynb  02-working-with-conformations.ipynb  03-excluded-volumes.ipynb  04-excluded-volumes-from-multiple-ligands.ipynb  05-writing-and-reading-pharmacophores.ipynb  06-pharmacophore-from-pdb.ipynb
src/pypharao/: __init__.py  alignment.py  constants.py  function_mapping.py  match_report.py  perception.py  perception_options.py  pharmacophore.py  quaternion_math.py  rdkit_perception.py  search.py  volume.py
src/pypharao.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_alignment_smoke.py  test_function_mapping.py  test_match_report.py  test_perception.py  test_perception_from_pharmacophore.py  test_perception_options.py  test_phar_golden.py  test_pharmacophore_json.py  test_pharmacophore_sdf_pdb.py  test_rdkit_perception.py  test_screen_parallel.py  test_search.py  test_volume.py
