[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypharao"
version = "1.0.0"
description = "Pharmacophore representation and Pharao-equivalent 3D Gaussian matching with RDKit"
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
authors = [{ name = "Silicos-it and contributors" }]
dependencies = [
    "numpy>=1.22",
    "rdkit>=2022.9.1",
    "tqdm>=4.66",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/silicos-it/PyPharao"
Repository = "https://github.com/silicos-it/PyPharao"
Issues = "https://github.com/silicos-it/PyPharao/issues"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pypharao = ["py.typed"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
